# Rust-aws-s3-uploader

./: Cargo.toml  generatefiles.ps1  pscriptmonitor.ps1  readme.md
src/: main.rs
testps1scripts/: duplicatefiles.ps1  pscriptmonitor.ps1
