[package]
name = "s3_uploader"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.70"
aws-config = "0.55.1"
aws-sdk-s3 = "0.26.0"
aws-smithy-http = "0.55.2"
clap = { version = "4.2.5", features = ["derive"] }
itertools = "0.10.5"
walkdir = "2.3.3"
tokio = { version = "1.37.0", features = ["full"] }

[profile.release]
opt-level = 3
debug = true