[package]
name = "s3_uploader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
aws-config = "1.3.0"
aws-sdk-s3 = "1.25.0"
aws-smithy-types = "1.1.8"
aws-smithy-http = "0.60.8"
clap = { version = "4.2.5", features = ["derive"] }
itertools = "0.12.1"
walkdir = "2.3.3"
tokio = { version = "1.37.0", features = ["full"] }

[profile.release]
opt-level = 3
debug = true